update webgl build

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Unity WebGL Player | GDD2019-chosquera</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/WebGL build.json");
+      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/WebBuild.json");
     </script>
   </head>
   <body>
